--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -71,7 +71,7 @@
                         <ul>
                             <li><span>Full Stack Web Development (Full Time)
                                 </span><br>Masai School <br>
-                                02/2022 – 10/2022 | Banglore, Karnataka</li>
+                                01/2022 – 09/2022 | Banglore, Karnataka</li>
                             <li><span>B.Tech (Mechanical Engineering)
                                 </span><br>Punjabi University <br>
                                 08/2015 – 08/2019 | Patiala, Punjab</li> 
@@ -83,8 +83,8 @@
                     <div class="tab-contents " id="skills">
                         <ul>
                             <li><span>Tech Skills</span><br>
-                                Java | Spring | MySQL | Spring Boot | Hibernate | <br>
-                                JavaScript | HTML | CSS
+                                Java | Spring | MySQL | Spring Boot | Angular.js | Hibernate | <br>
+                                node.js | HTML | CSS | GIT
 
                             </li>
                             <li><span>Soft Skills</span><br>
@@ -95,8 +95,9 @@
                    
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>No Experience</span><br></li>
-                            
+                            <li><span>Jr. Java Developer</span><br></li>
+                            <li>Hostbooks Limited</li>
+                            <p>10/2022- Present | Gurugram, Haryana</p>
                     </div>
                 </div>
             </div>
@@ -151,6 +152,13 @@
                 </div>
                 <div>
                     <!-- <i class="fa-solid fa-code"></i> -->
+                    <img src="https://repository-images.githubusercontent.com/314186076/79a18fff-1aeb-4a12-9340-db81b383b5e7" alt="angular">
+                    <!-- <h2>Java</h2> -->
+                    <!-- <p>eegegdfgdfgdg</p> -->
+                    <!-- <a href="#">learm more</a> -->
+                </div>
+                <div>
+                    <!-- <i class="fa-solid fa-code"></i> -->
                     <img src="https://www.pngkey.com/png/detail/141-1415392_css3-css-logo-transparent-background.png" alt="">
                     <!-- <h2>Java</h2> -->
                     <!-- <p>eegegdfgdfgdg</p> -->
@@ -158,7 +166,7 @@
                 </div>
                 <div>
                     <!-- <i class="fa-solid fa-code"></i> -->
-                    <img src="https://assets.easypost.com/assets/images/blog/nodejs.e0f0440a85f5d3f2d3d07161a8360362.png" alt="">
+                    <img src="https://assets.easypost.com/assets/images/blog/nodejs.e0f0440a85f5d3f2d3d07161a8360362.png" alt="nodejs">
                     <!-- <h2>Java</h2> -->
                     <!-- <p>eegegdfgdfgdg</p> -->
                     <!-- <a href="#">learm more</a> -->
